# Old-Persian-Dataset

./: README.md  readme.md
ImageDataset/Behistun/: Behistun_metadata.csv
ImageDataset/British-Museum/: BritishMuseum_metadata.csv  readme.md
ImageDataset/CDLI/: CDLI_metadata.csv
ImageDataset/Pasargad/: Pasargad_metadata.csv
ImageDataset/Persepolis/: Persepolis_metadata.csv
ImageDataset/Susa/: Susa_metadata.csv
TextDataset/: persianoldtext.txt
imagedata/british_museum/: readme.md
imagedata/mousavi _letters/: readme.md
imagedata/simple _letters/: readme.md
imagedata/web_scraping/: README.md  pyproject.toml  requirements.txt  run.py
imagedata/web_scraping/scraper/: items.py  pipelines.py  settings.py
imagedata/web_scraping/scraper/scraper/: items.py  pipelines.py
imagedata/web_scraping/scraper/spiders/: livius_article_photos.py
imagedata/web_scraping_livius/: readme.md  scrape.py
textdata/eng_transcription_to_english/: eng_transcription_to_english_001.json  susa_darius_1_001.json
textdata/lists/: old_persian _wordlist.txt  old_persian_signlist.txt  persian _old _wordlist.txt  persian_old_signlist.txt
textdata/web_scraping/: A1Pa.txt  A1Pb.txt  A1Va.txt  A1Vb.txt  A1Vc-d.txt  A2Ha.txt  A2Hb.txt  A2Hc.txt  A2Pa.txt  A2Sa.txt  A2Sb.txt  A2Sc.txt  A2Sd.txt  CB.txt  CMa.txt  CMc.txt  D2Ha.txt  D2Sa.txt  D2Sb.txt  DB.txt  DE.txt  DG.txt  DH.txt  DNa.txt  DNb.txt  DNc.txt  DNd.txt  DNe.txt  DPa.txt  DPb.txt  DPc.txt  DPd.txt  DPe.txt  DPf-g.txt  DPh.txt  DPi.txt  DPj.txt  DSa.txt  DSaa.txt  DSab.txt  (+47 more)
textdata/web_scraping_livius/: readm.md
(+31 files in other folders)
