[tool.poetry]
name = "web-scraping"
version = "0.1.0"
description = ""
authors = ["Mamad Zahiri <mamadzhri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.2"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
